feat: implement automated daily goal calculation system
Implements Story 1.3 - Automated Daily Goal Calculation per Epic 1 requirements:

Core Features:
- WHO-based goal calculation algorithms (steps, calories, heart points)
- Automatic goal calculation after onboarding completion
- Profile update triggers for goal recalculation
- Read-only goal display preventing manual editing
- Fallback goals for calculation failures

Technical Implementation:
- GoalCalculationService with WHO Physical Activity Guidelines 2020
- Harris-Benedict Revised equation for calorie calculations
- Heart points based on WHO 150min/week moderate activity
- Local-first storage with Room database and AES-256 encryption
- Cloud sync with Firebase Firestore and security rules
- Hilt dependency injection and MVVM architecture
- Kotlin Coroutines for background processing

Integration:
- Seamless integration with Story 1.2 (onboarding) data flow
- Automatic goal provision for Story 1.4 (dashboard display)
- Real-time goal updates when profile changes
- Error handling with medically-safe fallback goals

Performance & Security:
- Sub-500ms calculation performance target
- AES-256 encryption for sensitive health data
- Offline-first approach with background cloud sync
- Comprehensive error handling and retry mechanisms

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             
             <!-- Deep link support for authentication -->
             <intent-filter android:autoVerify="true">
+                <data android:scheme="http" />
+                <data android:scheme="https" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
